[package]
name = "esp-camera-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std", "embassy", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
alloc = ["esp-idf-svc/alloc"]

[dependencies]
esp-idf-hal = "0.43.0"
esp-idf-sys = "0.34.0"
esp-idf-svc = { version = "0.48.0", default-features = false }

[patch.crates-io]
esp-idf-sys = {git = "https://github.com/esp-rs/esp-idf-sys", branch = "master"}

[build-dependencies]
embuild = "0.31.3"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "esp32-camera"
bindings_header = "bindings.h"
bindings_module = "camera"
